<resources>
    <string name="app_name">AndroidStudy</string>
    <string name="ui_sample_btn_title">Uiサンプル</string>
    <string name="db_sample_btn_title">DBサンプル</string>
    <string name="pref_sample_btn_title">Prefサンプル</string>
    <string name="list_sample_btn_title">Listサンプル</string>
    <string name="intent_sample_btn_title">Intentサンプル</string>
    <string name="fragment_sample_btn_title">Fragmentサンプル</string>
    <string name="webview_sample_btn_title">WebViewサンプル</string>
    <string name="binding_sample_btn_title">Bindingサンプル</string>
    <string name="async_sample_btn_title">Threadサンプル</string>
    <string name="service_sample_btn_title">Serviceサンプル</string>
    <string name="async_task_sample_btn_title">AsyncTaskサンプル</string>
</resources>
